# xelos-edge

./: .gitignore  README.md  install.ps1  install.sh  pyproject.toml
runtime/: __init__.py  api.py  capabilities.py  cc_process.py  cli.py  config.py  daemon.py  events.py  fingerprint.py  fs_mirror.py  hydrate.py  launcher.py  mcp_server.py  path_resolver.py  reconcile.py  run_supervisor.py  state_db.py  tui.py  updates.py  watcher.py
xelos_edge/: capabilities.py  cli.py  daemon.py  fingerprint.py
xelos_runtime/: config.py  fingerprint.py
