[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xelos-edge"
version = "0.1.0"
description = "Xelos Edge daemon — runs agents on a paired local machine via Claude Code."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Xelos" }]

dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "websockets>=13.0",
    "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
xelos = "xelos_runtime.cli:main"

[tool.setuptools.packages.find]
include = ["xelos_runtime*"]
